--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="title">Welcome to Ling-Games!</h1>
+        <div class="title1">Welcome to Ling-Games!</h1>
     </div>
     <div class="container">
-        <a href="./Jvowels.html">
-            <button>Japanese</button>
-        </a>
-        <a href="">
-            <button>Russian</button>
-        </a>
+        <div class="row button-row">
+            <div class="col-md-6">
+                <a href="./Jvowels.html">
+                    <button>Japanese</button>
+                  </a>
+            </div>
+            <div class="col-md-6">
+                <a href="">
+                    <button>Russian</button>
+                </a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
