--- a/Jvowels.html
+++ b/Jvowels.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Major+Mono+Display&family=Orbitron&family=Press+Start+2P&family=Quantico&family=Rajdhani:wght@300&family=Roboto&family=Special+Elite&family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/japaneseStyle.css">
 </head>
 <body>
 <div class="navbar">
