--- a/index.html
+++ b/index.html
@@ -3,29 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ling-Games</title>
+    <title>Language Grahams</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Major+Mono+Display&family=Orbitron&family=Press+Start+2P&family=Quantico&family=Rajdhani:wght@300&family=Roboto&family=Special+Elite&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bebas+Neue&family=Fascinate&family=Teko&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <div class="navbar">
-        <div class="title1">Welcome to Ling-Games!</h1>
+        <div class="title1">Welcome to Language Grahams!</h1>
     </div>
     <div class="container">
-        <div class="row button-row">
-            <div class="col-md-6">
-                <a href="./Jvowels.html">
-                    <button>Japanese</button>
-                  </a>
-            </div>
-            <div class="col-md-6">
-                <a href="">
-                    <button>Russian</button>
-                </a>
-            </div>
+        <div class="col-md-6 column" id="arabic">ARABIC
+            <a class="rpg" id="theHauntedTreasure" href="Jvowels.html">
+                <span>STORY MODE</span>
+            </a>
+            <a class="rpg" id="theHauntedTreasure" href="Jvowels.html">
+                <span>PUZZLE STYLE</span>
+            </a>
+        </div>
+        <div class="col-md-6 column" id="japanese">JAPANESE
+            <a class="rpg" id="japaneseSoundBoard" href="Jvowels.html">
+                <span>STORY MODE</span>
+            </a>
+            <a class="rpg" id="japaneseSoundBoard" href="Jvowels.html">
+                <span>Japanese Soundboard</span>
+            </a>
+            <a class="rpg" id="japaneseSoundBoard" href="Jvowels.html">
+                <span>Hiragana/Katakana Flashcards</span>
+            </a>
+        </div>
+        <div class="col-md-6 column" id="russian">RUSSIAN
+            <a class="rpg" id="russianCards" href="Jvowels.html">
+                <span>STORY MODE</span>
+            </a>
+            <a class="rpg" id="russianCards" href="Jvowels.html">
+                <span>Russian Flashcards</span>
+            </a>
+            <a class="rpg" id="russianCards" href="Jvowels.html">
+                <span>Russian Soundboard</span>
+            </a>
         </div>
     </div>
 </body>
